# mympi_demo

./: .gitignore  CMakeLists.txt  README.md  machinefile  main.c
src/: helloFromProcess.c  helloFromProcess.h  helloPro.c  helloPro.h
